--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./src/index.js"
   },
   "author": "Leo",
   "license": "MIT",
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.1",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
