feat: Create user and character routes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Leonardo-KF/C017-FS#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
