--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "sequelize": "^6.21.4",
+    "sqlite3": "^5.0.11"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "sequelize-cli": "^6.4.1"
   }
 }
